--- a/public/css/app.css
+++ b/public/css/app.css
@@ -115,3 +115,74 @@ main .comic-card figcaption {
 #banner-section figure figcaption a {
   color: #FFF;
 }
+
+/* FOOTER TOP */
+#footer-top {
+  background-image: url("/images/footer-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 2rem 0;
+  text-align: center;
+  position: relative;
+}
+#footer-top .container {
+  display: flex;
+  flex-wrap: wrap;
+}
+#footer-top .container .list-column {
+  padding-left: 1rem;
+}
+#footer-top .container .list-column h4 {
+  font-size: 1.2rem;
+  padding-bottom: 0.4rem;
+  text-align: start;
+}
+#footer-top .container .list-column ul {
+  padding: 0;
+}
+#footer-top .container .list-column ul li {
+  font-size: 1rem;
+  font-weight: lighter;
+  text-align: start;
+  padding: 0.2rem 0;
+}
+
+#background-logo {
+  max-height: 350px;
+  position: absolute;
+  top: 50%;
+  right: 5rem;
+  transform: translateY(-50%);
+}
+
+/* FOOTER BOTTOM */
+#footer-bottom {
+  height: 100px;
+  background-color: #303030;
+}
+#footer-bottom .container {
+  height: 100%;
+}
+#footer-bottom .container #sign-up {
+  padding: 0.5rem;
+  border: 1px solid #1E82F6;
+  cursor: pointer;
+  color: #FFF;
+}
+#footer-bottom nav #follow-us {
+  color: #1E82F6;
+}
+#footer-bottom nav li {
+  margin-left: 1rem;
+}
+#footer-bottom nav img {
+  max-width: 1.5rem;
+}
+
+#footer-bottom .container,
+#footer-bottom nav,
+#footer-bottom ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
