--- a/resources/sass/_utilities.scss
+++ b/resources/sass/_utilities.scss
@@ -2,3 +2,29 @@
     width: 1200px;
     margin: 0 auto;
   }
+
+  .small-container {
+    width: 900px;
+    margin: 0 auto;
+  }
+
+  .wall-position {
+    position: relative;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.text-white{
+  color: #fff;
+}
+
+.text-blue{
+  color: #1E82F6;
+}
+
+
+.m-b {
+  margin-bottom: 2rem;
+}
