--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -2,11 +2,21 @@ main {
     background-color: #1C1C1C;
 
     #background{
-        height: 400px;
+        min-height: 500px;
         background-image: url(../images/jumbotron.jpg);
         background-position: top;
         position: relative;
-        
+
+        &.border-bottom{
+        border-bottom: 4.5rem solid $color_blue;
+        }
+
+        .thumb{
+            position: absolute;
+            top: 12rem;
+            left: 0;
+        }
+
         #current-series {
             font-size: 1.5rem;
             font-weight: bold;
@@ -39,7 +49,10 @@ main {
         }
 
         figcaption{
+            margin-top: 0.5rem;
             text-transform: capitalize;
+            color: #fff;
+
         }
 
     }
@@ -74,4 +87,82 @@ main {
         }
     
         }
+
+        //SINGLE COMIC PAGE
+
+        #comic-detail{
+            padding: 3rem 0;
+            background-color: #fff;
+            color: #000;
+
+            h1 {
+                font-weight: 600;
+                color: #123F5E;
+            }
+            .availability-box{
+                padding: 1rem;
+                background-color: #55BA59;
+                display: flex;
+                border: 1px solid black;
+
+                .price-section {
+                    color: #BAF67D;
+                    flex-grow: 1;
+                    padding-right: 1rem;
+
+                    display: flex;
+                    justify-content: space-between;
+                }
+                .availability-select {
+                    padding-left: 1rem;
+                    width: 10rem;
+                }
+
+            }
+
+            .comic-description {
+                font-weight: 100;
+                line-height: 1.5rem;
+            }
         }
+
+        .comic-table {
+            background-color: #F6F6F6;
+            color: #000;
+            padding: 1rem 0;
+            font-size: 0.8rem;
+
+            h3{
+                padding: 1rem 0;
+                font-size: 1.2rem;
+                color: #123F5E;
+
+            }
+
+            .table-row {
+                display: flex;
+                border-bottom: 1px solid black;
+
+                .table-column{
+                    padding: 1rem 0;
+                    flex-basis: 50%;
+
+                }
+            }
+
+            .talent {
+                flex-basis: 50%;
+            }
+
+            .specs {
+                padding-left: 1rem;
+                flex-grow: 1;
+            }
+        }
+
+
+    }
+
+    .white-main {
+        background-color: #fff;
+    }
